k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: rekreativko
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
