k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: rekreativko
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rekreativko.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
